一些优化